# pg-scrape-auto

./: .gitignore  Dockerfile  Dockerfile_amd64  README.md  botHAR.py  botHAR_rpi.py  botHAR_rpi_fixed.py  clean-table.py  cleanTable.py  clean_table.py  config.json  filter_url_param_config.py  generate_snapshot.py  pipeline.bat  pipeline.sh  process-html-listings-var-guru.py  process-listings.py  process_listings.py  pyproject.toml  requirements.txt  scrape_propguru.py  scrape_propguru_rpi.py  scrape_propguru_single.py  sleep.bat  write_bq.py
cloud/: README.md  deploy.sh
cloud/src/: analyses_config.py  backend_analysis.py  backend_processing.py  config.yaml  filter_table.csv  main.py  manual_rerun.py  transforms.py  transforms_config.py  util_alert.py
dashboard_app/: Dockerfile_amd64  README.md  deploy.sh  pyproject.toml
dashboard_app/src/: Home.py  app.py  backend_bq.py  sample_data.csv
dashboard_app/src/data/init/: metadata.json
dashboard_app/src/pages/: 1_Market_Watch.py  2_By_Region_&_Size.py  2_HDB_by_Region.py  3_Historical_Trends
data/dl-htmls/: run_report.txt
infra/: ecr.tf  eventbridge.tf  iam.tf  lambda.tf  main.tf  s3.tf
local/: README.md  notes.md  pyproject.toml  www.propertyguru.com.sg.har
local/scripts/: custom.bat  garbage.bat  pipeline.bat  pipeline_dl.bat  upload.bat
local/src/: backend_download_html.py  backend_generate_headers.py  config.yaml  main.py  utils.py
reference_data/maps/: planning_area_2019.geojson  planning_area_with_district.json  prepare_geojson.py
scripts/: pipeline.sh
