[tool.poetry]
name = "local"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false
[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
pyyaml = "^6.0.2"
pyautogui = "^0.9.54"
beautifulsoup4 = "^4.12.3"
brotli = "^1.1.0"
pyscreeze = "^1.0.1"
pillow = "^10.4.0"
boto3 = "^1.35.10"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"
tqdm = "^4.66.5"
pyarrow = "^17.0.0"
pandasql = "^0.7.3"
google-cloud = "^0.34.0"
google-cloud-storage = "^2.18.2"
google-cloud-bigquery = "^3.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
