[tool.poetry]
name = "dashboard-app"
version = "0.1.0"
description = ""
authors = ["OQ <olivesarenice@gmail.com>"]
readme = "README.md"
package-mode = false
[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
loguru = "^0.7.2"
google-cloud = "^0.34.0"
google-cloud-storage = "^2.18.2"
google-cloud-bigquery = "^3.25.0"
db-dtypes = "^1.3.0"
google-cloud-bigquery-storage = "^2.26.0"
streamlit = "^1.38.0"
streamlit-lightweight-charts = "^0.7.20"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
