[tool.poetry]
name = "local"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
pyyaml = "^6.0.2"
pyautogui = "^0.9.54"
beautifulsoup4 = "^4.12.3"
brotli = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
